# telegram-cleaner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  telegram_cleaner.py
tests/: test_clean.py  test_collect.py  test_legacy_chats.py  test_tui.py
