[project]
name = "telegram-cleaner"
version = "0.1.0"
description = "A Telegram cleaner script for managing DMs, chats, and admin operations"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "textual>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ANN",    # flake8-annotations (strict typing)
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",    # Use of assert detected
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
